--- a/index.amp.html
+++ b/index.amp.html
@@ -28,7 +28,7 @@
 
 <amp-facebook width=552 height=303
     layout="responsive"
-    data-href="https://www.facebook.com/sheryl/posts/10159820635610177"
+    data-href="https://www.facebook.com/100094287330054/posts/pfbid0rHkQZ4QLzCSDhzoXTiFZmMeTzpcA8HmaB6qcxYToKUsPUGbbJUPpLCtQXqwCqMzhl/?app=fbl  "
     data-locale="fr_FR">
 </amp-facebook>
 
@@ -62,29 +62,23 @@
     data-href="https://developers.facebook.com/docs/plugins/comments">
 </amp-facebook-comments>
 
-<amp-facebook-comments width=552 height=310
-    layout="responsive"
-    data-numposts="5"
-    data-order-by="social"
-    data-href="https://developers.facebook.com/docs/plugins/comments"
-    data-locale="fr_FR">
-</amp-facebook-comments>
+
 
 <h2>Like button</h2>
 <amp-facebook-like width=90 height=20
     layout="fixed"
     data-layout="button_count"
-    data-href="https://www.facebook.com/testesmegadivertidos/">
+    data-href="https://www.facebook.com/Callus/">
 </amp-facebook-like>
 
 <amp-facebook-like width=90 height=20
     layout="fixed"
     data-layout="button_count"
-    data-href="https://www.facebook.com/testesmegadivertidos/"
+    data-href="https://www.facebook.com/Callus/"
     data-locale="fr_FR">
 </amp-facebook-like>
 
-<h2>Like button with faces</h2>
+<h2>Sponsored</h2>
 <amp-facebook-like width=225 height=80
     layout="fixed"
     title="Facebook Like"
@@ -94,7 +88,7 @@
     data-href="https://www.facebook.com/GoogleBrasil">
 </amp-facebook-like>
 
-<h2>Page</h2>
+<h2>About Page</h2>
 <amp-facebook-page width=552 height=310
     layout="responsive"
     data-tabs="timeline"
@@ -104,14 +98,14 @@
 <amp-facebook-page width=552 height=310
     layout="responsive"
     data-tabs="timeline, events, messages"
-    data-href="https://www.facebook.com/YoloBookStore/">
+    data-href="https://www.facebook.com/AffiliateShow/">
 </amp-facebook-page>
 
 <amp-facebook-page width="300" height="300"
     layout="fixed"
     data-adapt-container-width="true"
     data-show-facepile="true"
-    data-href="https://www.facebook.com/itsdougthepug">
+    data-href="https://www.facebook.com/MalicGalant">
 </amp-facebook-page>
 
 </body>
