--- a/index.amp.html
+++ b/index.amp.html
@@ -16,9 +16,10 @@
 <body>
 
 
-
-<h2>CallusLife</h2>
-
+<div align="center">
+<h1>CallusLife</h1>
+</div>
+    
 <amp-facebook width=552 height=303
     layout="responsive"
     data-href="https://www.facebook.com/100094287330054/posts/100136293139282/">
@@ -32,29 +33,8 @@
     data-locale="fr_FR">
 </amp-facebook>
 
-<amp-facebook width=552 height=350
-    layout="responsive"
-    data-href="https://www.facebook.com/notes/facebook-engineering/under-the-hood-the-javascript-sdk-truly-asynchronous-loading/10151176218703920/"
-    data-align-center="true">
-</amp-facebook>
 
-<amp-facebook width=552 height=579
-    layout="responsive"
-    data-href="https://www.facebook.com/zuck/posts/10102542090197661">
-</amp-facebook>
-
-<amp-facebook width=552 height=544
-    layout="responsive"
-    data-href="https://www.facebook.com/photo.php?fbid=10102533316889441&set=a.529237706231.2034669.4&type=3&theater">
-</amp-facebook>
-
-<amp-facebook width=552 height=310
-    layout="responsive"
-    data-embed-as="video"
-    data-href="https://www.facebook.com/zuck/videos/10102509264909801/">
-</amp-facebook>
-
-<h2>Comments</h2>
+<h4>Comments</h4>
 <amp-facebook-comments width=552 height=310
     layout="responsive"
     data-numposts="5"
@@ -64,7 +44,7 @@
 
 
 
-<h2>Like button</h2>
+<h2>Buttons</h2>
 <amp-facebook-like width=90 height=20
     layout="fixed"
     data-layout="button_count"
@@ -89,17 +69,7 @@
 </amp-facebook-like>
 
 <h2>About Page</h2>
-<amp-facebook-page width=552 height=310
-    layout="responsive"
-    data-tabs="timeline"
-    data-href="https://www.facebook.com/barackobama/">
-</amp-facebook-page>
 
-<amp-facebook-page width=552 height=310
-    layout="responsive"
-    data-tabs="timeline, events, messages"
-    data-href="https://www.facebook.com/AffiliateShow/">
-</amp-facebook-page>
 
 <amp-facebook-page width="300" height="300"
     layout="fixed"
