--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>CallusLife App</title>
-    <link rel="canonical" href="index.html" >
+    <link rel="canonical" href="https://www.google.com/amp/www.callus.life" >
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
     <script async custom-element="amp-facebook" src="https://cdn.ampproject.org/v0/amp-facebook-0.1.js"></script>
@@ -16,8 +16,8 @@
 <body>
 
 
-<div align="center">
-<h3>CallusLife</h3>
+
+<h1>CallusLife</h1>
     
 
     
