--- a/info.html
+++ b/info.html
@@ -7,16 +7,16 @@
 <html ⚡ lang="en">
 <head>
 <meta charset="utf-8">
-      <title>amp-fx-flying-carpet</title>
+      <title>Info Page</title>
       <script async src="https://cdn.ampproject.org/v0.js"></script>
       <!-- ## Setup -->
       <!-- Import the `amp-fx-flying-carpet` component in the header. -->
       <script async custom-element="amp-fx-flying-carpet" src="https://cdn.ampproject.org/v0/amp-fx-flying-carpet-0.1.js"></script>
       <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
       <meta name="viewport" content="width=device-width">
-      <link rel="canonical" href="https://amp.dev/documentation/examples/components/amp-fx-flying-carpet/index.html">
+      <link rel="canonical" href="https://www.callus.life/info.html">
       <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
-    <style amp-custom>
+      <style amp-custom>
     :root {
       --color-secondary: #00DCC0;
     }
