--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>CallusLife App</title>
-    <link rel="canonical" href="https://www.google.com/amp/www.callus.life" >
+    <link rel="canonical" href="index.html" >
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
     <script async custom-element="amp-facebook" src="https://cdn.ampproject.org/v0/amp-facebook-0.1.js"></script>
@@ -31,7 +31,7 @@
 <amp-facebook width=552 height=303
     layout="responsive"
     data-href="https://www.facebook.com/100094287330054/posts/pfbid0rHkQZ4QLzCSDhzoXTiFZmMeTzpcA8HmaB6qcxYToKUsPUGbbJUPpLCtQXqwCqMzhl/?app=fbl  "
-    data-locale="fr_FR">
+    data-locale="En">
 </amp-facebook>
     
 
