--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
 
     
+<a href="https://www.callus.life%c" title="Callus Life" target="_blank"><span style="color: red"><b>Callus Life</b></span></a> <span style="color: white">Support the Earth To Generated Potten Buds </span><br>
 
     
 <amp-facebook width=552 height=303
