--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
+<head>
+<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
 
-
-
+</head>
 <body>
   
+<!-- /22826216928/TopLevel -->
+<div id='div-gpt-ad-1686315435634-0'>
+  <script>
+    googletag.cmd.push(function() { googletag.display('div-gpt-ad-1686315435634-0'); });
+  </script>
+</div>
 
-<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
 <div id="gpt-passback">
   <script>
     window.googletag = window.googletag || {cmd: []};
