--- a/privacy/index.html
+++ b/privacy/index.html
@@ -2,7 +2,7 @@
 <html ⚡ lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Adsense examples</title>
+  <title>Privacy</title>
   <link rel="canonical" href="http://nonblocking.io/" >
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <style amp-custom>
@@ -58,10 +58,10 @@
       id="amp-user-notification">
     This site uses cookies to personalize content.
     <a href="#learn-more">Learn more.</a>
-    <button on="tap:amp-user-notification.dismiss" tabindex="0">I accept</button>
+    <button on="tap:amp-user-notification.dismiss" tabindex="0">I Accept</button>
   </amp-user-notification>
 
-  <h2>AdSense</h2>
+  <h2>Maliek Galant</h2>
   <amp-ad width=300 height=250
       type="adsense"
       data-ad-client="ca-pub-2005682797531342"
@@ -83,7 +83,7 @@
     <!-- Make the second ad below the fold. -->
   </div>
 
-  <h2>AdSense ad 2</h2>
+  <h2>AdS</h2>
 
   <amp-ad width=300 height=250
       type="adsense"
