--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
  </head>
   <body>
 
+    
+  <amp-sticky-ad layout="nodisplay">
+  <amp-ad width="300" height="250"
+      type="adsense"
+      data-ad-client="ca-pub-8588820008944775">
+  </amp-ad>
+  </amp-sticky-ad>
   
   <!-- ## Basic usage -->
   <!--
