--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@
  </head>
   <body>
 
+<amp-user-notification
+      layout=nodisplay
+      id="amp-user-notification">
+    This site uses cookies to personalize content.
+    <a href="#learn-more">Learn more.</a>
+    <button on="tap:amp-user-notification.dismiss" tabindex="0">I Accept</button>
+  </amp-user-notification>
+
+
     
   <amp-sticky-ad layout="nodisplay">
   <amp-ad width="300" height="250"
