--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <title>Callus Life</title>
 
+  <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+  <script async custom-element="amp-user-notification" src="https://cdn.ampproject.org/v0/amp-user-notification-0.1.js"></script>
+  <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
 
   <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
   <script async custom-element="amp-video" src="https://cdn.ampproject.org/v0/amp-video-0.1.js"></script>
@@ -91,7 +94,7 @@
  </head>
   <body>
 
-<amp-user-notification
+  <amp-user-notification
       layout=nodisplay
       id="amp-user-notification">
     This site uses cookies to personalize content.
