--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 <html ⚡ lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel="canonical" href="https://www.callus.life">
+  <link rel="canonical" href="https://www.callus.life/index.html">
   <meta name="viewport" content="width=device-width">
   <meta name="ezoic-site-verification" content="kH7u7u4pmJzzqnCpbrhQQ7BTa5R6NF" />
+  
   <script async src="https://cdn.ampproject.org/v0.js"></script>
+  
   <title>Callus Life</title>
 
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
   <script async custom-element="amp-user-notification" src="https://cdn.ampproject.org/v0/amp-user-notification-0.1.js"></script>
   <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
-
   <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
   <script async custom-element="amp-video" src="https://cdn.ampproject.org/v0/amp-video-0.1.js"></script>
   <script async custom-element="amp-list" src="https://cdn.ampproject.org/v0/amp-list-0.1.js"></script>  
@@ -29,67 +30,8 @@
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   
   <style amp-custom>
-  :root {
-      --space-4: 2rem;
-      --space-2: 1rem;
-      --color-primary: #005AF0;
-      --color-text-light: #fff;
-    }
-    .amp-next-page-sample-separator {
-      margin: var(--space-4) 0;
-      padding: var(--space-2);
-      background: var(--color-primary);
-      color: var(--color-text-light);
-    }
-    .previewOnly {
-      margin: var(--space-4);
-    }
-    * {
-      box-sizing: border-box;
-    }
-    amp-story * {
-      font-family: 'Helvitica Nueve', sans-serif;
-      color: white;
-    }
-    amp-story-page {
-      background: white;
-    }
-    amp-story h1 {
-      font-size: 46px;
-    }
-    amp-story h2 {
-      font-size: 36px;
-    }
-    amp-story p {
-      font-size: 16px;
-      line-height: 24px;
-    }
-    .bold {
-      font-weight: bold;
-    }
-    .bottom {
-      align-content: end;
-    }
-    .medium {
-      font-weight: 600;
-    }
-    .last {
-      padding-bottom: 65px;
-    }
-    .center {
-      text-align: center;
-    .icon {
-      background-image: url(https://amp.dev/static/samples/img/AMP-Brand-White-Icon.svg);
-      background-repeat: no-repeat;
-      background-size: 50px 50px;
-      height: 50px;
-      object-fit: contain;
-      width: 50px;
-    }
-    .byline {
-      letter-spacing: 1.28px;
-      padding-bottom: 58px;
-    }
+  
+    
   </style>
  </head>
   <body>
