--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 
 <!---
 Copyright 2017 The AMP Start Authors. All Rights Reserved.
@@ -1937,7 +1937,7 @@ limitations under the License.
               class="ampstart-dropdown"
             >
               <section>
-                <header>Food</header>
+                <header>Callus</header>
                 <ul class="ampstart-dropdown-items list-reset m0 p0">
                   <li class="ampstart-dropdown-item">
                     <a href="#" class="text-decoration-none">Recipes</a>
@@ -2042,11 +2042,15 @@ limitations under the License.
 
       <ul class="ampstart-sidebar-faq list-reset m0">
         <li class="ampstart-faq-item">
-          <a href="#" class="text-decoration-none">About</a>
+          <a href="https://www.callus.life/about/" class="text-decoration-none">About</a>
         </li>
         <li class="ampstart-faq-item">
-          <a href="#" class="text-decoration-none">Contact</a>
+          <a href="https://www.callus.life/contact/" class="text-decoration-none">Contact</a>
         </li>
+        <li class="ampstart-faq-item">
+          <a href="https://www.callus.life/privacy/" class="text-decoration-none">Privacy</a>
+        </li>
+            
       </ul>
     </amp-sidebar>
     <!-- End Sidebar -->
@@ -2055,19 +2059,19 @@ limitations under the License.
       <article class="recipe-article">
         <header>
           <span class="ampstart-subtitle block px3 pt2 mb2">FOOD</span>
-          <h1 class="mb1 px3">Ginger Strawberry</h1>
+          <h1 class="mb1 px3">Strawberry</h1>
 
           <!-- Start byline -->
           <address class="ampstart-byline clearfix mb4 px3 h5">
             <time
               class="ampstart-byline-pubdate block bold my1"
               datetime="2016-12-13"
-              >December 13, 2016</time
+              >December 1, 2016</time
             >
           </address>
           <!-- End byline -->
           <amp-img
-            src="../img/blog/spritzer.jpg"
+            src="spritzer.jpg"
             width="1280"
             height="853"
             layout="responsive"
@@ -2092,7 +2096,7 @@ limitations under the License.
           pretium libero.
         </p>
         <amp-img
-          src="../img/blog/ingredient1.jpg"
+          src="ingredient1.jpg"
           width="683"
           height="1024"
           layout="responsive"
@@ -2101,7 +2105,7 @@ limitations under the License.
         ></amp-img>
 
         <amp-img
-          src="../img/blog/ingredient3.jpg"
+          src="ingredient3.jpg"
           width="1280"
           height="960"
           layout="responsive"
@@ -2110,7 +2114,7 @@ limitations under the License.
         ></amp-img>
 
         <amp-img
-          src="../img/blog/ingredient2.jpg"
+          src="ingredient2.jpg"
           width="683"
           height="1024"
           layout="responsive"
@@ -2119,7 +2123,7 @@ limitations under the License.
         ></amp-img>
 
         <amp-img
-          src="../img/blog/spritzer.jpg"
+          src="spritzer.jpg"
           width="1280"
           height="853"
           layout="responsive"
