--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 
 <!---
 Copyright 2017 The AMP Start Authors. All Rights Reserved.
@@ -15,12 +15,11 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-
 <html ⚡="">
   <head>
     <meta charset="utf-8" />
-    <title>The Callus Blog</title>
-    <link rel="canonical" href="https://www.ampstart.com/templates/blog.amp" />
+    <title>The Callus</title>
+    <link rel="canonical" href="https://www.callus.life/index.html" />
     <meta name="viewport" content="width=device-width" />
     <meta name="amp-google-client-id-api" content="googleanalytics" />
     <script async="" src="https://cdn.ampproject.org/v0.js"></script>
