--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Callus Life</title>
-  <link rel="canonical" href="http://nonblocking.io/" >
+  <link rel="canonical" href="https://www.callus.life" >
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <style amp-custom>
     amp-ad {
@@ -52,7 +52,9 @@
 
 </head>
 <body>
-  <h2>Callus Life</h2>
+  
+  <h1>Callus Life</h1>
+  
   <amp-user-notification
       layout=nodisplay
       id="amp-user-notification">
@@ -65,18 +67,18 @@
   
   <amp-ad width=300 height=250
       type="adsense"
-      data-ad-client="ca-pub-2005682797531342"
-      data-ad-slot="7046626912">
+      data-ad-client="    "
+      data-ad-slot="  ">
     <div placeholder></div>
     <div fallback></div>
   </amp-ad>
 
   <amp-ad width=300 height=250
           type="adsense"
-          data-ad-client="ca-pub-2005682797531342"
-          data-ad-slot="7046626912"
+          data-ad-client="ca-pub-"
+          data-ad-slot=" "
           data-consent-notification-id="amp-user-notification">
-    <div placeholder>should only show ad after notification get dismissed</div>
+    <div placeholder>Should Only Show Ad After Notification Get Dismissed</div>
     <div fallback></div>
   </amp-ad>
 
@@ -88,8 +90,8 @@
 
   <amp-ad width=300 height=250
       type="adsense"
-      data-ad-client="ca-pub-2005682797531342"
-      data-ad-slot="7046626912"
+      data-ad-client="ca-pub- "
+      data-ad-slot=" "
       data-adtest="on">
     <div placeholder></div>
     <div fallback></div>
@@ -98,7 +100,7 @@
   <amp-sticky-ad layout="nodisplay">
   <amp-ad width="300" height="250"
       type="adsense"
-      data-ad-client="ca-pub-8588820008944775">
+      data-ad-client="   ">
   </amp-ad>
   </amp-sticky-ad>
 
