--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Callus Life</title>
-  <link rel="canonical" href="https://www.callus.life" >
+  <link rel="canonical" href="https://www.callus.life/" >
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <style amp-custom>
     amp-ad {
@@ -45,6 +45,7 @@
   </style>
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
+  
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
   <script async custom-element="amp-user-notification" src="https://cdn.ampproject.org/v0/amp-user-notification-0.1.js"></script>
   <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
@@ -53,7 +54,7 @@
 </head>
 <body>
   
-  <h1>Callus Life</h1>
+  <h1>CallusLife</h1>
   
   <amp-user-notification
       layout=nodisplay
@@ -65,22 +66,7 @@
 
   
   
-  <amp-ad width=300 height=250
-      type="adsense"
-      data-ad-client="    "
-      data-ad-slot="  ">
-    <div placeholder></div>
-    <div fallback></div>
-  </amp-ad>
 
-  <amp-ad width=300 height=250
-          type="adsense"
-          data-ad-client="ca-pub-"
-          data-ad-slot=" "
-          data-consent-notification-id="amp-user-notification">
-    <div placeholder>Should Only Show Ad After Notification Get Dismissed</div>
-    <div fallback></div>
-  </amp-ad>
 
   <div class=talldiv>
     <!-- Make the second ad below the fold. -->
