--- a/app.html
+++ b/app.html
@@ -23,6 +23,13 @@
   </head>
   <body>
     <h1>Callus Life</h1>
+    <div id="modal" class="modal">
+    <button id="close-button" class="close-button" aria-label="close" tabindex="0">✕</button>
+    <div>
+        <h1>Notice</h1>
+        Lorem ipsum dolor sit amet.
+    </div>
+</div>
     <ol>
       <li>
         Watch the favicon. You should see a counter that updates each second
