--- a/app.html
+++ b/app.html
@@ -19,7 +19,7 @@
         });
       }
     </script>
-    <script src="app.js" type="module"></script>
+    <script src="script.js" type="module"></script>
   </head>
   <body>
     <h1>Callus Life</h1>
