--- a/app.html
+++ b/app.html
@@ -6,6 +6,15 @@
     <link rel="manifest" href="manifest.json" />
     <title>Maliek Galant</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- Google Tag Manager -->
+    <script>
+  (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-N82JJHJ');
+    </script>
+<!-- End Google Tag Manager -->
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', async () => {
@@ -23,7 +32,13 @@
   </head>
   <body>
     <h1>Callus Life</h1>
-    
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N82JJHJ"
+height="0" width="0" style="display:none;visibility:hidden">
+    </iframe>
+    </noscript>
+<!-- End Google Tag Manager (noscript) -->
     <div id="modal" class="modal">
     <button id="close-button" class="close-button" aria-label="close" tabindex="0">✕</button>
     <div>
