--- a/index.html
+++ b/index.html
@@ -30,43 +30,10 @@
     <div>
         <h1>Licence Agreement</h1>
       We use cookies to track users measurements for analytics purposes only .
-        <button onclick="consentGranted">Agree</button>
-        <button onclick="noconsentGranted">Decline</button>
+        <button id="button" onclick="consentGranted">Agree</button>
+        <button id="button" onclick="noconsentGranted">Decline</button>
     </div>
 </div>
 
-
-    <ol>
-      <li>
-        Watch the favicon. You should see a counter that updates each second
-        integrated into the favicon.
-        <img
-          src="../logo.png"
-          style="width: 250px; height: auto"
-          width="528"
-          height="74"
-          alt="Favicon with counter."
-        />
-      </li>
-      <li>
-        Install the app by clicking the button below. After the installation,
-        the button is disabled.
-        <p>
-          <button disabled type="button">Install</button>
-        </p>
-      </li>
-      <li>
-        Watch the app icon in your operating system's task bar. You should see a
-        counter that updates each second as an app badge.
-        <img
-          src="../app.png"
-          style="width: 80px; height: auto"
-          width="282"
-          height="388"
-          alt="App badge with counter."
-        />
-      </li>
-    </ol>
-    <favicon-badge src="../favicon.svg" textColor="#fff" badge="" />
-  </body>
+</body>
 </html>
