--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
     <div>
         <h1>Licence Agreement</h1>
       We use cookies to track users measurements for analytics purposes only .
-        <button id="button1" onclick="consentGranted">Agree</button>
-        <button id="button1" onclick="noconsentGranted">Decline</button>
+        <button class="button button1" onclick="consentGranted">Agree</button>
+        
+        <button class="button button1" onclick="noconsentGranted">Decline</button>
     </div>
 </div>
 
